# ProtobufLite

./: .gitignore  BuildAndroid.bat  BuildIOS.sh  BuildMac.sh  BuildWindows.bat  CMakeLists.txt  README.md  xmake.lua
.github/workflows/: MacTask.yml  TestTask.yml  WindowsTask.yml
Release/Darwin/Lib/Release/: libprotobuf-lite.3.10.0.dylib
Release/Windows/Lib/Release/: protobuf-lite.exp  protobuf-lite.lib
Release/iOS/Lib/Release/: CC5F898D-324B-3759-80B2-2DA68702A240.bcsymbolmap  libprotobuf-lite.3.10.0.dylib  libprotobuf-lite.dylib
src/google/protobuf/stubs/: common.cc  port.h  strutil.cc
